--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
+    <string name="action_filter">Filter</string>
 
     <!-- Strings related to login -->
     <string name="prompt_mobile_number">Mobile Number</string>
