--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,6 +54,40 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_donor_respond">DonorRespondActivity</string>
+    <string name="have_you_donated_before">Have you donated before</string>
+    <string name="last_donation_date">Last donation date</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
+    <string name="chennai_red_knights">Chennai Red Knights</string>
+    <string name="email">Email</string>
+    <string name="home_location">Home Location</string>
+    <string name="gender">Gender:</string>
+    <string name="date_of_birth">Date of birth</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="first_name">First name</string>
+    <string name="mobile_number">Mobile number</string>
+    <string name="blood_group">Blood group</string>
+    <string name="last_name">Last name</string>
+    <string name="of">&#032;of&#032;</string>
+    <string name="needed">&#032;needed</string>
+    <string name="donate">Donate</string>
+    <string name="error">Error</string>
+    <string name="network_error_message">Unable to load blood donation requests now. Please try later</string>
+    <string name="empty_blood_requests">No pending blood requests :)</string>
+    <string name="retry">Retry</string>
+    <string name="patient_name">Patient name</string>
+    <string name="hospital">Hospital</string>
+    <string name="contact_number">Contact number</string>
+    <string name="units_required">Units required</string>
+    <string name="donation_date">Donation date</string>
+    <string name="time">Time</string>
+    <string name="city">City</string>
+    <string name="i_donate">I Donate</string>
+
+    <plurals name="unit">
+        <item quantity="one">unit</item>
+        <item quantity="other">units</item>
+    </plurals>
 
     <string-array name="number">
         <item>1</item>
